# PdfDing

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  bootstrap.sh  execute_docker_compose.sh  fix_277.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: manual_publish.yaml  tests.yaml
.github/workflows/scripts/: update_files_after_release.py
compose/: README.md  postgres.docker-compose.yaml  sqlite.docker-compose.yaml
pdfding/: manage.py
pdfding/admin/: views.py
pdfding/admin/templates/: information.html  user_overview.html
pdfding/admin/tests/: test_views.py
pdfding/backup/: tasks.py
pdfding/backup/tests/: test_tasks.py
pdfding/base/: base_views.py
pdfding/base/tests/: base_view_definitions.py  test_base_views.py
pdfding/core/: middleware.py  urls.py
pdfding/core/settings/: base.py  dev.py  prod.py
pdfding/core/tests/: test_middleware.py
pdfding/e2e/: test_admin_e2e.py  test_collection_e2e.py  test_pdf_annotations_e2e.py  test_pdf_bulk_actions.py  test_pdf_details_e2e.py  test_pdf_overview_e2e.py  test_pdf_overview_sidebar_e2e.py  test_share_e2e.py  test_shared_collection_e2e.py  test_shared_pdf_e2e.py  test_users_e2e.py  test_workspace_e2e.py
pdfding/pdf/: forms.py  service.py  tasks.py  urls.py
pdfding/pdf/migrations/: 0003_add_pdf_sharing.py  0009_readd_number_of_pages_with_new_default.py  0013_add_pdf_previews.py  0015_add_comments_highlights.py  0016_rename_pdfs_and_add_file_directory.py  0019_add_collections_workspaces.py  0020_fill_collections_workspaces.py  0023_remove_owner.py  (+12 more)
pdfding/templates/: base.html
pdfding/users/: api.py  forms.py  models.py  service.py  signals.py  urls.py  views.py
(+180 files in other folders)
