[project]
name = "pdfding"
# do not change the version line position as it will break the automated update after a release
version = "1.9.0"
description = "Selfhosted PDF manager, viewer and editor offering a seamless user experience on multiple devices."
authors = [
  { name = "mrmn2" },
]
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.11 <4.0"
django = "==5.2.14"
django-allauth = { extras = ["mfa", "socialaccount"], version = "==65.18.0" }
django-htmx = "==1.27.0"
gunicorn = "==26.0.0"
huey = "==3.0.1"
Markdown = "==3.10.2"
minio = "==7.2.20"
nh3 = "==0.3.5"
psycopg2-binary = "==2.9.12"
pypdfium2 = "==5.8.0"
pypdf = "==6.13.3"
python-magic = "==0.4.27"
qrcode = { extras = ["pil"], version = "==8.2" }
RapidFuzz = "==3.14.5"
supervisor = "==4.3.0"
whitenoise = { extras = ["brotli"], version = "==6.12.0" }

[tool.poetry.group.dev.dependencies]
bandit = "==1.9.4"
black = "==26.5.1"
flake8 = "==7.3.0"
pytest = "==9.0.3"
pytest-cov = "==7.1.0"
pytest-django = "==4.12.0"

[tool.poetry.group.e2e.dependencies]
pytest-playwright = "==0.8.0"

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pdfding.core.settings"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true
